--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,10 +30,20 @@
         android:layout_height="wrap_content"
 
        />
+
     <Button
+        android:id="@+id/getWeatherButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Get Weather"/>
+        android:clickable="true"
+        android:onClick="getWeather"
+        android:text="Get Weather" />
+
+    <TextView
+        android:id="@+id/weatherData"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="TextView" />
 
 
 </LinearLayout>
