--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,18 +18,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:text="" />
+        android:text="139" />
     <TextView
         android:id="@+id/latLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="latitude" />
+
     <EditText
         android:id="@+id/lat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-       />
+        android:text="35" />
 
     <Button
         android:id="@+id/getWeatherButton"
@@ -42,8 +43,7 @@
     <TextView
         android:id="@+id/weatherData"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="TextView" />
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
